Project SmartFactory_MVP_Minimal_NoSafetyReservation {
  database_type: 'PostgreSQL'
  Note: '''
  Minimal implementable SmartFactory schema.
  Runtime state and logs are separated.
  safety_incidents and resource_reservations are intentionally omitted for first implementation.
  camera_events is generalized to evidence_events.
  '''
}

Enum robot_status {
  IDLE
  RESERVED
  MOVING
  DOCKING
  LIFTING
  PAUSED
  ERROR
  OFFLINE
  CHARGING
}

Enum task_status {
  PENDING
  RUNNING
  PAUSED
  COMPLETED
  FAILED
  CANCELLED
  NEEDS_REVIEW
}

Enum command_status {
  PENDING
  SENT
  ACKED
  SUCCEEDED
  FAILED
  TIMEOUT
  CANCELLED
}

Enum task_result {
  SUCCESS
  FAILURE
  CANCELLED
}

Enum evidence_event_type {
  FRAME
  DETECT
  NAV_REACHED
  ARUCO_DETECTED
  LOAD_DETECTED
  SLOT_CONFIRMED
  HUMAN_DETECTED
  HUMAN_CLEAR
  ERROR
  STATUS
}

Enum inventory_event_type {
  INBOUND
  OUTBOUND
  MOVE
  ADJUST
  CORRECTION
  RESERVED
  RELEASED
}

Table locations {
  id uuid [pk]
  code text [unique, not null, note: 'INBOUND_01/STORAGE_A_01/OUTBOUND_01/CHARGE_01']
  name text [not null]
  location_type text [not null, note: 'AREA/WAYPOINT/SLOT/CHARGE']
  parent_location_id uuid [ref: > locations.id]
  approach_location_id uuid [ref: > locations.id]
  status text [not null, note: 'AVAILABLE/RESERVED/OCCUPIED/BLOCKED/UNKNOWN']
  pose_x float8
  pose_y float8
  pose_yaw float8
  capacity integer
  aruco_marker_id integer
  metadata_json jsonb

  indexes {
    location_type
    status
    parent_location_id
    approach_location_id
  }
}

Table robots {
  id uuid [pk]
  robot_code text [unique, not null, note: 'tb3_1/tb3_2']
  robot_name text [not null]
  status robot_status [not null]
  battery_level float8
  current_location_id uuid [ref: > locations.id]
  active_task_id uuid
  last_seen_at timestamptz

  indexes {
    status
    current_location_id
    active_task_id
    last_seen_at
  }
}

Table items {
  id uuid [pk]
  item_code text [unique, not null]
  item_name text [not null]
  unit text [not null, default: 'ea']
}

Table inventory {
  item_id uuid [not null, ref: > items.id]
  location_id uuid [not null, ref: > locations.id]
  quantity integer [not null, default: 0]
  updated_at timestamptz

  indexes {
    (item_id, location_id) [pk]
    location_id
  }
}

Table tasks {
  id uuid [pk]
  task_no bigint [unique]
  task_type text [not null, note: 'INBOUND/OUTBOUND/MOVE/RECOVERY']
  status task_status [not null]
  priority integer [not null, default: 0]
  robot_id uuid [ref: > robots.id]
  item_id uuid [ref: > items.id]
  quantity integer [not null, default: 1]
  source_location_id uuid [ref: > locations.id]
  target_location_id uuid [ref: > locations.id]
  command_payload_json jsonb
  error_reason text
  created_at timestamptz
  updated_at timestamptz

  indexes {
    status
    robot_id
    item_id
    source_location_id
    target_location_id
    created_at
  }
}

Table commands {
  id uuid [pk]
  task_id uuid [ref: > tasks.id]
  robot_id uuid [ref: > robots.id]
  sequence_no integer [not null, default: 1, note: 'Used as lightweight task step order']
  command_type text [not null, note: 'NAV_GOAL/DOCK_ARUCO/LIFT_UP/LIFT_DOWN/STOP/RESUME']
  target_system text [not null, note: 'NAV_SERVER/AI_SERVER/ROBOT_BRIDGE']
  status command_status [not null]
  required_evidence_type evidence_event_type [note: 'nullable; evidence needed before command/task is accepted as done']
  idempotency_key text [unique, not null]
  request_json jsonb
  response_json jsonb
  deadline_at timestamptz
  created_at timestamptz
  updated_at timestamptz

  indexes {
    task_id
    robot_id
    status
    required_evidence_type
    created_at
    (task_id, sequence_no) [unique]
  }
}

Table evidence_events {
  id uuid [pk]
  event_type evidence_event_type [not null]
  source_type text [not null, note: 'GLOBAL_CAMERA/PICAMERA/NAV_SERVER/ROBOT/OPERATOR']
  source_code text [note: 'global_cam_01/tb3_1_picam/nav_server']
  robot_id uuid [ref: > robots.id]
  task_id uuid [ref: > tasks.id]
  command_id uuid [ref: > commands.id]
  location_id uuid [ref: > locations.id]
  confidence float8
  trusted_for_policy boolean [not null, default: false]
  evidence_text text
  evidence_img_uri text
  payload_json jsonb
  observed_at timestamptz
  created_at timestamptz

  indexes {
    event_type
    source_type
    robot_id
    task_id
    command_id
    location_id
    trusted_for_policy
    created_at
  }
}

Table task_logs {
  id uuid [pk]
  task_id uuid [ref: > tasks.id]
  robot_id uuid [ref: > robots.id]
  item_id uuid [ref: > items.id]
  quantity integer
  task_type text [not null]
  source_location_id uuid [ref: > locations.id]
  target_location_id uuid [ref: > locations.id]
  started_at timestamptz [not null]
  finished_at timestamptz
  result task_result [not null]
  fail_reason text
  detail text
  command_payload_json jsonb

  indexes {
    task_id
    robot_id
    result
    started_at
  }
}

Table item_change_logs {
  id uuid [pk]
  item_id uuid [not null, ref: > items.id]
  location_id uuid [ref: > locations.id]
  task_id uuid [ref: > tasks.id]
  event_type inventory_event_type [not null]
  quantity_change integer [not null]
  quantity_before integer
  quantity_after integer
  reason text
  changed_at timestamptz [not null]

  indexes {
    item_id
    location_id
    task_id
    event_type
    changed_at
  }
}

Ref: robots.active_task_id > tasks.id

TableGroup physical_state {
  robots
  locations
  items
  inventory
}

TableGroup execution {
  tasks
  commands
}

TableGroup evidence_and_logs {
  evidence_events
  task_logs
  item_change_logs
}
